<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ashleystalvig.simpletexter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SelectContact"
            android:textSize="25sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/lola" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtvLola"
            android:text="@string/Lola"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imageView1" />

        <Button
            android:id="@+id/btnLola"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickB1"
            android:text="@string/LolaBtn"
            android:layout_toEndOf="@+id/imageView1"
            android:layout_below="@+id/txtvLola"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/marlene" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtvMarlene"
            android:text="@string/Marlene"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imageView2" />

        <Button
            android:id="@+id/btnMarlene"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickB2"
            android:text="@string/MarleneBtn"
            android:layout_toEndOf="@+id/imageView2"
            android:layout_below="@+id/txtvMarlene"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/tiffy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtvTiffy"
            android:text="@string/Tiffy"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imageView3" />

        <Button
            android:id="@+id/btnTiffy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickB3"
            android:text="@string/TiffyBtn"
            android:layout_toEndOf="@+id/imageView3"
            android:layout_below="@+id/txtvTiffy"/>

    </RelativeLayout>

</LinearLayout>
